[package]
name = "gxf2chrom"
version = "0.1.0"
authors = ["alejandrogzi <jose.gonzalesdezavala1@unmsm.edu.pe>"]
edition = "2021"
license = "MIT"
description = "Everything in .chrom from GTF/GFF"
homepage = "https://github.com/alejandrogzi/gxf2chrom"
repository = "https://github.com/alejandrogzi/gxf2chrom"
readme = "README.md"
keywords = ["chrom", "gtf", "gff" ,"cli", "convert"]
categories = ["command-line-utilities", "science"]


[dependencies]
thiserror = "1.0"
hashbrown = {version="0.14", features=["rayon", "serde"]}
rayon = ">1.7"
clap = {version="4.5", features=["derive"]}
num_cpus = ">1.14"
flate2 = "1.0"
libc = "0.2.151"
log = "0.4.14"
simple_logger = "4.0.0"

[profile.release]
lto = true
